# testtaskfor-

./: .gitignore
backend/: README.md  alembic.ini  pyproject.toml  simple.env
backend/migrations/: env.py
backend/migrations/versions/: 1a2b3c4d5e6f_add_cascade_delete_to_alerts.py
backend/src/: app.py
backend/src/api/: router.py
backend/src/api/dto/: alert_dto.py  file_dto.py
backend/src/api/routers/: __init__.py  alerts_router.py  files_router.py
backend/src/core/: config.py  container.py  db.py  exceptions.py
backend/src/models/: __init__.py  alert.py  base.py  stored_file.py
backend/src/repository/: __init__.py  alert_repository.py  base_repository.py  file_repository.py
backend/src/services/: alert_service.py  file_processing_service.py  file_service.py
backend/src/tasks/: __init__.py  celery_app.py  tasks.py
backend/tests/: conftest.py  test_files_api.py
frontend/src/api/: files.ts
frontend/src/app/: page.tsx
frontend/src/components/: AddFileModal.tsx  AlertTable.tsx  FileTable.tsx
frontend/src/hooks/: useFilesPage.ts
frontend/src/utils/: format.ts
