[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"  # TODO: Временно установлено 3.11 для совместимости с вашей версией Python 3.11!!!!
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "dishka>=1.9.1",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.10",
]

[tool.poetry]
package-mode = false
